// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stats test should create all collections: all stat collections 1`] = `
Object {
  "detailed": Object {
    "A-collection1.A-sub-collection1-1": Object {
      "collectionName": "A-collection1.A-sub-collection1-1",
      "stats": Object {
        "fails": Object {
          "collectionName": "A-collection1.A-sub-collection1-1",
          "headers": Array [
            "name",
            "[31mfails[39m",
            "reason",
          ],
          "name": "fails",
          "rows": Array [
            Array [
              "A-collection1.A-sub-collection1-1",
              "b.txt",
              "J'en sais rien",
            ],
            Array [
              "",
              "c.txt",
              "J'en sais rien",
            ],
            Array [
              "",
              "d.txt",
              "J'en sais rien",
            ],
          ],
        },
      },
    },
    "A-collection1.B-sub-collection1-2": Object {
      "collectionName": "A-collection1.B-sub-collection1-2",
      "stats": Object {
        "fails": Object {
          "collectionName": "A-collection1.B-sub-collection1-2",
          "headers": Array [
            "name",
            "[31mfails[39m",
            "reason",
          ],
          "name": "fails",
          "rows": Array [
            Array [
              "A-collection1.B-sub-collection1-2",
              "b.txt",
              "J'en sais rien",
            ],
            Array [
              "",
              "c.txt",
              "J'en sais rien",
            ],
            Array [
              "",
              "d.txt",
              "J'en sais rien",
            ],
          ],
        },
      },
    },
    "B-collection2.A-sub-collection.A-sub-sub-collection": Object {
      "collectionName": "B-collection2.A-sub-collection.A-sub-sub-collection",
      "stats": Object {
        "fails": Object {
          "collectionName": "B-collection2.A-sub-collection.A-sub-sub-collection",
          "headers": Array [
            "name",
            "[31mfails[39m",
            "reason",
          ],
          "name": "fails",
          "rows": Array [
            Array [
              "B-collection2.A-sub-collection.A-sub-sub-collection",
              "b.txt",
              "J'en sais rien",
            ],
            Array [
              "",
              "c.txt",
              "J'en sais rien",
            ],
            Array [
              "",
              "d.txt",
              "J'en sais rien",
            ],
          ],
        },
      },
    },
  },
  "global": Object {
    "global": Object {
      "collectionName": "",
      "headers": Array [
        "name",
        "total",
        "cache hits",
        "successes",
        "fails",
      ],
      "name": "global",
      "rows": Array [
        Array [
          "A-collection1.A-sub-collection1-1",
          4,
          "",
          "[32m1 / 4[39m",
          "[31m3 / 4[39m",
        ],
        Array [
          "A-collection1.B-sub-collection1-2",
          4,
          "",
          "[32m1 / 4[39m",
          "[31m3 / 4[39m",
        ],
        Array [
          "B-collection2.A-sub-collection.A-sub-sub-collection",
          4,
          "",
          "[32m1 / 4[39m",
          "[31m3 / 4[39m",
        ],
      ],
    },
  },
}
`;

exports[`Stats test should create all collections: stat sub-collections 1`] = `
Object {
  "detailed": Object {
    "A-sub-sub-collection": Object {
      "collectionName": "A-sub-sub-collection",
      "stats": Object {
        "fails": Object {
          "collectionName": "A-sub-sub-collection",
          "headers": Array [
            "name",
            "[31mfails[39m",
            "reason",
          ],
          "name": "fails",
          "rows": Array [
            Array [
              "A-sub-sub-collection",
              "b.txt",
              "J'en sais rien",
            ],
            Array [
              "",
              "c.txt",
              "J'en sais rien",
            ],
            Array [
              "",
              "d.txt",
              "J'en sais rien",
            ],
          ],
        },
      },
    },
  },
  "global": Object {
    "global": Object {
      "collectionName": "",
      "headers": Array [
        "name",
        "total",
        "cache hits",
        "successes",
        "fails",
      ],
      "name": "global",
      "rows": Array [
        Array [
          "A-sub-sub-collection",
          4,
          "",
          "[32m1 / 4[39m",
          "[31m3 / 4[39m",
        ],
      ],
    },
  },
}
`;

exports[`Stats test should log all collections: all stats as string 1`] = `
Array [
  "                                                                                                                                                                                                        ",
  "[45m[37m                                                                                         \\"Stats Test\\" summary                                                                                           [39m[49m",
  "                                                                                                                                                                                                        ",
  "",
  "╔════════════════════════════════════════════════════════════╗",
  "║        A-collection1 ❯ A-sub-collection1-1 ⟹  fails        ║",
  "╟───────────────────────────────────┬───────┬────────────────╢",
  "║ name                              │ [31mfails[39m │ reason         ║",
  "╟───────────────────────────────────┼───────┼────────────────╢",
  "║ A-collection1.A-sub-collection1-1 │ b.txt │ J'en sais rien ║",
  "╟───────────────────────────────────┼───────┼────────────────╢",
  "║                                   │ c.txt │ J'en sais rien ║",
  "╟───────────────────────────────────┼───────┼────────────────╢",
  "║                                   │ d.txt │ J'en sais rien ║",
  "╚═══════════════════════════════════╧═══════╧════════════════╝",
  "",
  "╔════════════════════════════════════════════════════════════╗",
  "║        A-collection1 ❯ B-sub-collection1-2 ⟹  fails        ║",
  "╟───────────────────────────────────┬───────┬────────────────╢",
  "║ name                              │ [31mfails[39m │ reason         ║",
  "╟───────────────────────────────────┼───────┼────────────────╢",
  "║ A-collection1.B-sub-collection1-2 │ b.txt │ J'en sais rien ║",
  "╟───────────────────────────────────┼───────┼────────────────╢",
  "║                                   │ c.txt │ J'en sais rien ║",
  "╟───────────────────────────────────┼───────┼────────────────╢",
  "║                                   │ d.txt │ J'en sais rien ║",
  "╚═══════════════════════════════════╧═══════╧════════════════╝",
  "",
  "╔══════════════════════════════════════════════════════════════════════════════╗",
  "║       B-collection2 ❯ A-sub-collection ❯ A-sub-sub-collection ⟹  fails       ║",
  "╟─────────────────────────────────────────────────────┬───────┬────────────────╢",
  "║ name                                                │ [31mfails[39m │ reason         ║",
  "╟─────────────────────────────────────────────────────┼───────┼────────────────╢",
  "║ B-collection2.A-sub-collection.A-sub-sub-collection │ b.txt │ J'en sais rien ║",
  "╟─────────────────────────────────────────────────────┼───────┼────────────────╢",
  "║                                                     │ c.txt │ J'en sais rien ║",
  "╟─────────────────────────────────────────────────────┼───────┼────────────────╢",
  "║                                                     │ d.txt │ J'en sais rien ║",
  "╚═════════════════════════════════════════════════════╧═══════╧════════════════╝",
  "",
  "╔══════════════════════════════════════════════════════════════════════════════════════════════╗",
  "║                                            global                                            ║",
  "╟─────────────────────────────────────────────────────┬───────┬────────────┬───────────┬───────╢",
  "║ name                                                │ total │ cache hits │ successes │ fails ║",
  "╟─────────────────────────────────────────────────────┼───────┼────────────┼───────────┼───────╢",
  "║ A-collection1.A-sub-collection1-1                   │ 4     │            │ [32m1 / 4[39m     │ [31m3 / 4[39m ║",
  "╟─────────────────────────────────────────────────────┼───────┼────────────┼───────────┼───────╢",
  "║ A-collection1.B-sub-collection1-2                   │ 4     │            │ [32m1 / 4[39m     │ [31m3 / 4[39m ║",
  "╟─────────────────────────────────────────────────────┼───────┼────────────┼───────────┼───────╢",
  "║ B-collection2.A-sub-collection.A-sub-sub-collection │ 4     │            │ [32m1 / 4[39m     │ [31m3 / 4[39m ║",
  "╚═════════════════════════════════════════════════════╧═══════╧════════════╧═══════════╧═══════╝",
  "",
]
`;

exports[`Stats test should log all collections: all stats as string with sorting 1`] = `
"                                                                                                                                                                        
[45m[37m                                                                         \\"Stats Test\\" summary                                                                           [39m[49m
                                                                                                                                                                        

╔══════════════════════════════════════════════════════════════════════════════╗
║       B-collection2 ❯ A-sub-collection ❯ A-sub-sub-collection ⟹  fails       ║
╟─────────────────────────────────────────────────────┬───────┬────────────────╢
║ name                                                │ [31mfails[39m │ reason         ║
╟─────────────────────────────────────────────────────┼───────┼────────────────╢
║ B-collection2.A-sub-collection.A-sub-sub-collection │ b.txt │ J'en sais rien ║
╟─────────────────────────────────────────────────────┼───────┼────────────────╢
║                                                     │ c.txt │ J'en sais rien ║
╟─────────────────────────────────────────────────────┼───────┼────────────────╢
║                                                     │ d.txt │ J'en sais rien ║
╚═════════════════════════════════════════════════════╧═══════╧════════════════╝

╔════════════════════════════════════════════════════════════╗
║        A-collection1 ❯ B-sub-collection1-2 ⟹  fails        ║
╟───────────────────────────────────┬───────┬────────────────╢
║ name                              │ [31mfails[39m │ reason         ║
╟───────────────────────────────────┼───────┼────────────────╢
║ A-collection1.B-sub-collection1-2 │ b.txt │ J'en sais rien ║
╟───────────────────────────────────┼───────┼────────────────╢
║                                   │ c.txt │ J'en sais rien ║
╟───────────────────────────────────┼───────┼────────────────╢
║                                   │ d.txt │ J'en sais rien ║
╚═══════════════════════════════════╧═══════╧════════════════╝

╔════════════════════════════════════════════════════════════╗
║        A-collection1 ❯ A-sub-collection1-1 ⟹  fails        ║
╟───────────────────────────────────┬───────┬────────────────╢
║ name                              │ [31mfails[39m │ reason         ║
╟───────────────────────────────────┼───────┼────────────────╢
║ A-collection1.A-sub-collection1-1 │ b.txt │ J'en sais rien ║
╟───────────────────────────────────┼───────┼────────────────╢
║                                   │ c.txt │ J'en sais rien ║
╟───────────────────────────────────┼───────┼────────────────╢
║                                   │ d.txt │ J'en sais rien ║
╚═══════════════════════════════════╧═══════╧════════════════╝

╔══════════════════════════════════════════════════════════════════════════════════════════════╗
║                                            global                                            ║
╟─────────────────────────────────────────────────────┬───────┬────────────┬───────────┬───────╢
║ name                                                │ total │ cache hits │ successes │ fails ║
╟─────────────────────────────────────────────────────┼───────┼────────────┼───────────┼───────╢
║ A-collection1.A-sub-collection1-1                   │ 4     │            │ [32m1 / 4[39m     │ [31m3 / 4[39m ║
╟─────────────────────────────────────────────────────┼───────┼────────────┼───────────┼───────╢
║ A-collection1.B-sub-collection1-2                   │ 4     │            │ [32m1 / 4[39m     │ [31m3 / 4[39m ║
╟─────────────────────────────────────────────────────┼───────┼────────────┼───────────┼───────╢
║ B-collection2.A-sub-collection.A-sub-sub-collection │ 4     │            │ [32m1 / 4[39m     │ [31m3 / 4[39m ║
╚═════════════════════════════════════════════════════╧═══════╧════════════╧═══════════╧═══════╝
"
`;

exports[`Stats test should log all collections: sub-collection stats as string 1`] = `
Array [
  "                                                                                                                                                                                                        ",
  "[45m[37m                                                                                         \\"Stats Test\\" summary                                                                                           [39m[49m",
  "                                                                                                                                                                                                        ",
  "",
  "╔═══════════════════════════════════════════════╗",
  "║         A-sub-sub-collection ⟹  fails         ║",
  "╟──────────────────────┬───────┬────────────────╢",
  "║ name                 │ [31mfails[39m │ reason         ║",
  "╟──────────────────────┼───────┼────────────────╢",
  "║ A-sub-sub-collection │ b.txt │ J'en sais rien ║",
  "╟──────────────────────┼───────┼────────────────╢",
  "║                      │ c.txt │ J'en sais rien ║",
  "╟──────────────────────┼───────┼────────────────╢",
  "║                      │ d.txt │ J'en sais rien ║",
  "╚══════════════════════╧═══════╧════════════════╝",
  "",
  "╔═══════════════════════════════════════════════════════════════╗",
  "║                            global                             ║",
  "╟──────────────────────┬───────┬────────────┬───────────┬───────╢",
  "║ name                 │ total │ cache hits │ successes │ fails ║",
  "╟──────────────────────┼───────┼────────────┼───────────┼───────╢",
  "║ A-sub-sub-collection │ 4     │            │ [32m1 / 4[39m     │ [31m3 / 4[39m ║",
  "╚══════════════════════╧═══════╧════════════╧═══════════╧═══════╝",
  "",
]
`;
